refactor: 변수명 변경 및 코드 최적화
- educationNum -> educationNumber
- toList()로 불변 리스트 반환